--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open",
+    "dev": "webpack-serve --no-hot-client",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "AR",
@@ -20,7 +20,6 @@
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "svg-sprite-loader": "^3.8.0",
     "svgo": "^1.0.5",
     "svgo-loader": "^2.1.0",
     "twig": "^1.12.0",
@@ -28,6 +27,6 @@
     "url-loader": "^1.1.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-serve": "^2.0.2"
   }
 }
