--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-serve --no-hot-client",
+    "dev": "webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "AR",
@@ -27,6 +27,6 @@
     "url-loader": "^1.1.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-serve": "^2.0.2"
+    "webpack-dev-server": "^3.1.5"
   }
 }
